fix places list

--- a/source/index.html
+++ b/source/index.html
@@ -57,18 +57,8 @@
             </p>
             <a href="#greece" class="intro__button button">Смотреть тур</a>
         </div>
-        <!-- <div class="intro__wrapper">
-          <div class="intro__inner">
-            <h1 class="intro__title title">Путешествие по Европе</h1>
-            <p class="intro__text">
-              В этом туре вы откроете для себя Европу в новом свете. Вас ждет:
-              море, горы, а также потрясающая красота природы.
-            </p>
-            <a href="#greece" class="intro__button button">Смотреть тур</a>
-          </div>
-        </div> -->
       </section>
-      <!-- <section class="places">
+      <section class="places">
         <div class="places__wrapper">
           <h2 class="places__title title">Mеста посещения</h2>
           <p class="places__text">
@@ -77,7 +67,7 @@
           </p>
           <ul class="places__list">
             <li class="places__item">
-              <a href="#greece">
+              <a href="#greece" class="places__card">
                 <picture>
                   <source type="image/webp" media="(max-width: 1023px)" srcset="img/places-greece-mobile@1x.webp 1x, img/places-greece-mobile@2x.webp 2x">
                   <source media="(max-width: 1023px)" srcset="img/places-greece-mobile@1x.jpg 1x, img/places-greece-mobile@2x.jpg 2x">
@@ -88,51 +78,51 @@
               </a>
             </li>
             <li class="places__item">
-              <a href="#albania">
+              <a href="#albania" class="places__card">
                 <picture>
-                  <source type="image/webp" media="(max-width: 1023px)" srcset="img/albania-tablet@1x.webp 1x, img/albania-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="img/albania-desktop@1x.webp 1x, img/albania-desktop@2x.webp 2x">
-                  <source media="(max-width: 1023px)" srcset="img/albania-tablet@1x.jpg 1x, img/albania-tablet@2x.jpg 2x">
-                  <img src="img/albania-desktop@1x.jpg" srcset="img/albania-desktop@2x.jpg 2x" class="places__image" width="350" height="430" alt="Албания">
+                  <source type="image/webp" media="(max-width: 1023px)" srcset="img/places-albania-mobile@1x.webp 1x, img/places-albania-mobile@2x.webp 2x">
+                  <source type="image/webp" srcset="img/places-albania-desktop@1x.webp 1x, img/places-albania-desktop@2x.webp 2x">
+                  <source media="(max-width: 1023px)" srcset="img/places-albania-mobile@1x.jpg 1x, img/places-albania-mobile@2x.jpg 2x">
+                  <img src="img/places-albania-desktop@1x.jpg" srcset="img/places-albania-desktop@2x.jpg 2x" class="places__image" width="350" height="430" alt="Албания">
                 </picture>
                 <span class="places__spotname">Албания</span>
               </a>
             </li>
             <li class="places__item">
-              <a href="#makedonia">
+              <a href="#makedonia" class="places__card">
                 <picture>
-                  <source type="image/webp" media="(max-width: 1023px)" srcset="img/makedonia-tablet@1x.webp 1x, img/makedonia-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="img/makedonia-desktop@1x.webp 1x, img/makedonia-desktop@2x.webp 2x">
-                  <source media="(max-width: 1023px)" srcset="img/makedonia-tablet@1x.jpg 1x, img/makedonia-tablet@2x.jpg 2x">
-                  <img src="img/makedonia-desktop@1x.jpg" srcset="img/albania-desktop@2x.jpg 2x" class="places__image" width="350" height="430" alt="Македония">
+                  <source type="image/webp" media="(max-width: 1023px)" srcset="img/places-makedonia-mobile@1x.webp 1x, img/places-makedonia-mobile@2x.webp 2x">
+                  <source type="image/webp" srcset="img/places-makedonia-desktop@1x.webp 1x, img/places-makedonia-desktop@2x.webp 2x">
+                  <source media="(max-width: 1023px)" srcset="img/places-makedonia-mobile@1x.jpg 1x, img/places-makedonia-mobile@2x.jpg 2x">
+                  <img src="img/places-makedonia-desktop@1x.jpg" srcset="img/places-albania-desktop@2x.jpg 2x" class="places__image" width="350" height="430" alt="Македония">
                 </picture>
                 <span class="places__spotname">Македония</span>
               </a>
             </li>
             <li class="places__item">
-              <a href="#montenegro">
+              <a href="#montenegro" class="places__card">
                 <picture>
-                  <source type="image/webp" media="(max-width: 1023px)" srcset="img/montenegro-tablet@1x.webp 1x, img/montenegro-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="img/montenegro-desktop@1x.webp 1x, img/montenegro-desktop@2x.webp 2x">
-                  <source media="(max-width: 1023px)" srcset="img/montenegro-tablet@1x.jpg 1x, img/montenegro-tablet@2x.jpg 2x">
-                  <img src="img/montenegro-desktop@1x.jpg" srcset="img/montenegro-desktop@2x.jpg 2x" class="places__image" width="350" height="430" alt="Черногория">
+                  <source type="image/webp" media="(max-width: 1023px)" srcset="img/places-montenegro-mobile@1x.webp 1x, img/places-montenegro-mobile@2x.webp 2x">
+                  <source type="image/webp" srcset="img/places-montenegro-desktop@1x.webp 1x, img/places-montenegro-desktop@2x.webp 2x">
+                  <source media="(max-width: 1023px)" srcset="img/places-montenegro-mobile@1x.jpg 1x, img/places-montenegro-mobile@2x.jpg 2x">
+                  <img src="img/places-montenegro-desktop@1x.jpg" srcset="img/places-montenegro-desktop@2x.jpg 2x" class="places__image" width="350" height="430" alt="Черногория">
                 </picture>
                 <span class="places__spotname">Черногория</span>
               </a>
             </li>
             <li class="places__item">
-              <a href="#croatia">
+              <a href="#croatia" class="places__card">
                 <picture>
-                  <source type="image/webp" media="(max-width: 1023px)" srcset="img/croatia-tablet@1x.webp 1x, img/croatia-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="img/croatia-desktop@1x.webp 1x, img/croatia-desktop@2x.webp 2x">
-                  <source media="(max-width: 1023px)" srcset="img/croatia-tablet@1x.jpg 1x, img/croatia-tablet@2x.jpg 2x">
-                  <img src="img/croatia-desktop@1x.jpg" srcset="img/croatia-desktop@2x.jpg 2x" class="places__image" width="350" height="430" alt="Хорватия">
+                  <source type="image/webp" media="(max-width: 1023px)" srcset="img/places-croatia-mobile@1x.webp 1x, img/places-croatia-mobile@2x.webp 2x">
+                  <source type="image/webp" srcset="img/places-croatia-desktop@1x.webp 1x, img/places-croatia-desktop@2x.webp 2x">
+                  <source media="(max-width: 1023px)" srcset="img/places-croatia-mobile@1x.jpg 1x, img/places-croatia-mobile@2x.jpg 2x">
+                  <img src="img/places-croatia-desktop@1x.jpg" srcset="img/places-croatia-desktop@2x.jpg 2x" class="places__image" width="350" height="430" alt="Хорватия">
                 </picture>
                 <span class="places__spotname">Хорватия</span>
               </a>
             </li>
           </ul>
-          <section class="places__slider slider">
+          <!-- <section class="places__slider slider">
             <ul class="slider__tabs">
               <li class="slider__tab">
                 <button class="slider__link slider__link--active" onclick="currentSlide(1)" id="greece">Греция</button>
@@ -357,8 +347,8 @@
                   </cite>
                   </blockquote>
               </li>
-            </ul>
-          </section> -->
+            </ul> -->
+          </section>
           <!-- <section class="places__price price">
             <div class="price__inner">
               <h2 class="price__title title">Цены</h2>
