--- a/source/index.html
+++ b/source/index.html
@@ -519,6 +519,6 @@
         </section>
       </div>
     </footer> -->
-    <script src="js/script.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
